Fix spacing below search bar on results page

--- a/app/static/styles/src/includes/_results_search_component.scss
+++ b/app/static/styles/src/includes/_results_search_component.scss
@@ -33,7 +33,7 @@
   }
 
   &__full-text-panel {
-    margin: calc($spacer__unit / 2) 0 $spacer__unit;
+    margin: calc($spacer__unit / 2) 0 0;
     @media (min-width: $grid__breakpoint-medium) {
       padding: calc($spacer__unit / 4) calc($spacer__unit * 1);
     }
